# Electronics_Supplier

./: .dockerignore  .env_template  .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
docker/: entrypoint.sh
electronics/: asgi.py  settings.py  urls.py  wsgi.py
network/: admin.py  api_urls.py  models.py  permissions.py  serializers.py  views.py
network/migrations/: 0001_initial.py
network/tests/: test_api.py  test_extra.py  test_models.py
nginx/: default.conf
static_site/: index.html
