[tool.poetry]
name = "electronics-supplier"
version = "0.1.0"
description = ""
authors = ["Aleksey <alstofly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.5"
djangorestframework = "^3.16.1"
django-filter = "^25.1"
drf-yasg = "^1.21.10"
flake8 = "^7.3.0"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
